--- a/info/static/info/bootstrap/scss/_variables.scss
+++ b/info/static/info/bootstrap/scss/_variables.scss
@@ -32,3 +32,4 @@ $sidebar-base-width: 225px;
 $sidebar-collapsed-width: 90px;
 // Change below variable to change the height of the sticky footer
 $sticky-footer-height: 80px;
+$enable-gradients : true;
