--- a/info/templates/info/base.html
+++ b/info/templates/info/base.html
@@ -35,8 +35,8 @@
   <body id="page-top">
 
     <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
-
-      <a class="navbar-brand mr-1" href="{% url 'index' %}">CollegeERP</a>
+      <img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/b8/GGSIU_logo.svg/1200px-GGSIU_logo.svg.png" alt="" width="50" height="40" class="d-inline-block align-text-top">
+      <a class="navbar-brand mr-1" href="{% url 'index' %}">Bharati Vidyapeeth's Institute of Computers Applications and Management</a>
 
       <button class="btn btn-link btn-sm text-white order-1 order-sm-0" id="sidebarToggle" href="#">
         <i class="fas fa-bars"></i>
@@ -63,7 +63,7 @@
     <div id="wrapper">
 
       <!-- Sidebar -->
-      <ul class="sidebar navbar-nav">
+      <ul class="sidebar navbar-nav bg-dark">
             <li class="nav-item">
               <a class="nav-link" href="{% url 'index' %}">
                 <span>Home</span>
