--- a/info/templates/info/t_timetable.html
+++ b/info/templates/info/t_timetable.html
@@ -13,7 +13,7 @@
                      <div class="table-responsive">
                         <table class="col-sm-12 table table-bordered table-striped table- cf " id="dataTable" width="100%" cellspacing="0">
                             <thead class="cf">
-                                <tr>
+                                <tr class="bg-info text-white">
                                     <th>      </th>
                                     <th>7:30 - 8:30</th>
                                     <th>8:30 - 9:30</th>
@@ -33,7 +33,7 @@
                                 <tr>
                                     {% for j in i %}
                                         {% if forloop.counter == 1 %}
-                                            <td><b>{{ j }}</b></td>
+                                            <td class="bg-info"><b>{{ j }}</b></td>
                                         {% elif j == True %}
                                             <td></td>
                                         {% else %}
