--- a/info/templates/info/marks_list.html
+++ b/info/templates/info/marks_list.html
@@ -3,14 +3,14 @@
 
     {% block content %}
                   <div class="card mb-3">
-            <div class="card-header">
+            <div class="card-header bg-info ">
               <i class="fas fa-table"></i>
             <b>Marks</b></div>
             <div class="card-body">
               <div class="table-responsive">
                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                   <thead>
-                    <tr>
+                    <tr class="bg-info text-white">
                         <th>Course ID</th>
                         <th>Course name</th>
                         <th>Internals 1</th>
