--- a/info/templates/info/attendance.html
+++ b/info/templates/info/attendance.html
@@ -2,15 +2,15 @@
     {% load static %}
 
     {% block content %}
-                  <div class="card mb-3">
-            <div class="card-header">
+                  <div class="card mb-3  ">
+            <div class="card-header bg-info "">
               <i class="fas fa-table"></i>
             <b>Attendance</b></div>
             <div class="card-body">
               <div class="table-responsive">
                 <table class="table table-bordered text-center" id="dataTable" width="100%" cellspacing="0">
-                  <thead class="thead-light ">
-                    <tr>
+                  
+                    <tr class="bg-info text-white">
                         <th>Course ID</th>
                         <th>Course name</th>
                         <th>Attended classes</th>
@@ -18,7 +18,7 @@
                         <th>Attendance %</th>
                         <th>Classes to attend</th>
                     </tr>
-                  </thead>
+                 
                   <tbody>
                     {% for a in att_list %}
                     <tr>
