--- a/info/templates/info/homepage.html
+++ b/info/templates/info/homepage.html
@@ -28,7 +28,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-          <a class="navbar-brand" href="{% url 'index' %}">CollegeERP</a>
+          <a class="navbar-brand" href="{% url 'index' %}">Bharati Vidyapeeth's Institute ofComputers Applications and Management</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -59,17 +59,17 @@
       <div class="row text-center">
 
         <div class="col-lg-3 col-md-6 mb-4">
-          <div class="card">
+          <div class="card ">
               <a href="{% url 'attendance' request.user.student.USN %}">
                 <img class="card-img-top" src="{% static 'info/images/attendance2.jpg' %}" alt="">
               </a>
-              <div class="card-body">
-              <h4 class="card-title">Attendance</h4>
+              <div class="card-body bg-info">
+              <h4 class="card-title ">Attendance</h4>
               <p class="card-text">View the attendance status for each of your courses. The attendance of each course is
                   also displayed as list of classes that were conducted.</p>
             </div>
             <div class="card-footer">
-                <a class="btn btn-primary" role="button" href="{% url 'attendance' request.user.student.USN %}"> View Attendance</a>
+                <a class="btn btn-info" role="button" href="{% url 'attendance' request.user.student.USN %}"> View Attendance</a>
             </div>
           </div>
         </div>
@@ -79,13 +79,13 @@
               <a href="{% url 'marks_list' request.user.student.USN %}">
                 <img class="card-img-top" src="{% static 'info/images/marks.jpg' %}" alt="">
               </a>
-              <div class="card-body">
+              <div class="card-body bg-warning">
               <h4 class="card-title">Marks</h4>
               <p class="card-text">View the marks obtained for each of your courses. These include the marks of 3
                   internal assessment, 2 events and the Semester End Exam  </p>
             </div>
             <div class="card-footer">
-                <a class="btn btn-primary" role="button" href="{% url 'marks_list' request.user.student.USN %}">View Marks</a>
+                <a class="btn btn-warning" role="button" href="{% url 'marks_list' request.user.student.USN %}">View Marks</a>
             </div>
           </div>
         </div>
@@ -95,13 +95,13 @@
               <a href="{% url 'timetable' request.user.student.class_id_id %}">
                 <img class="card-img-top" src="{% static 'info/images/timetable.png' %}" alt="">
               </a>
-              <div class="card-body">
+              <div class="card-body bg-dark text-white">
               <h4 class="card-title">TimeTable</h4>
               <p class="card-text">View the timetable in a tabular form. The timetable displays all the courses of the
                   student and the time and day at which they are conducted.</p>
             </div>
             <div class="card-footer">
-                <a class="btn btn-primary" role="button" href="{% url 'timetable' request.user.student.class_id_id %}">View TimeTable</a>
+                <a class="btn btn-dark" role="button" href="{% url 'timetable' request.user.student.class_id_id %}">View TimeTable</a>
             </div>
           </div>
         </div>
