--- a/info/templates/info/attendance.html
+++ b/info/templates/info/attendance.html
@@ -9,8 +9,8 @@
             <div class="card-body">
               <div class="table-responsive">
                 <table class="table table-bordered text-center" id="dataTable" width="100%" cellspacing="0">
-                  <thead class="thead-light ">
-                    <tr>
+                 
+                    <tr class="bg-info">
                         <th>Course ID</th>
                         <th>Course name</th>
                         <th>Attended classes</th>
