--- a/info/templates/info/login.html
+++ b/info/templates/info/login.html
@@ -62,7 +62,7 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-      <h2 style="text-align:center ;">STUDENT AND TEACHER LOGIN PORTAL</h2>
+      <h2 style="text-align:center; color:green;">SOLAR</h2>
 
        <div class="card card-login mx-auto mt-5 ">
         <div class="card-header bg-dark text-white">Login</div>
