--- a/info/templates/info/login.html
+++ b/info/templates/info/login.html
@@ -44,13 +44,13 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="{% static 'info/images/download.jpg' %}" class="d-block w-100" alt="...">
+            <img src="{% static 'info/images/ipu.png' %}" class="d-block w-100" alt="..." width="25%">
           </div>
           <div class="carousel-item">
-            <img src="{% static 'info/images/BVICAM-Delhi.PNG' %}" class="d-block w-100" alt="...">
+            <img src="{% static 'info/images/bvp.PNG' %}" class="d-block w-100" alt="..." width="25%">
           </div>
           <div class="carousel-item">
-            <img src="{% static 'info/images/3RD.jpg' %}" class="d-block w-100" alt="...">
+            <img src="{% static 'info/images/3RD.jpg' %}" class="d-block w-100" alt="..." width="25%">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -62,7 +62,7 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-      <h2 style="text-align:center; color:green;">SOLAR</h2>
+      <h2 style="text-align:center; color:green;">S O L A R</h2>
 
        <div class="card card-login mx-auto mt-5 ">
         <div class="card-header bg-dark text-white">Login</div>
